--- a/izayl/index.html
+++ b/izayl/index.html
@@ -22,10 +22,6 @@
 				<span>登录</span>
 			</a></li>
 		</ul>
-		<!-- <div class="nw-login">
-			<img src="" alt="">
-			<span>登录</span>
-		</div> -->
 	</nav>
 	<div class="nw-banner">
 		<div class="mask">
@@ -58,11 +54,136 @@
 		</ul>
 	</div>
 	<div class="nw-section-2">
-		
+		<div class="content">
+			<img src="img/logo@2x.png" alt="">
+			<h1>关于新世界，你不知道的还有什么？</h1>
+		</div>
 	</div>
-	<div class="nw-section-3"></div>
-	<div class="nw-section-4"></div>
-	<div class="nw-section-5"></div>
+	<div class="nw-section-3">
+		<div class="mask">
+			<h1>查找新世界城市活动信息</h1>
+			<p>每个城市都有不同的活动信息，请自主查询您所需要了解的城市</p>
+			<div class="input-group">
+				<input type="text" name="country" id="country" placeholder="中国">
+				<input type="text" name="province" id="province" placeholder="省份">
+				<ul>
+					<li class="active">
+						<span>&radic;</span>
+						北京市
+					</li>
+					<li>
+						<span>&radic;</span>
+						天津市
+					</li>
+					<li>
+						<span>&radic;</span>
+						河北省
+					</li>
+					<li>
+						<span>&radic;</span>
+						陕西省
+					</li>
+					<li>
+						<span>&radic;</span>
+						河南省
+					</li>
+					<li>
+						<span>&radic;</span>
+						江西省
+					</li>
+					<li>
+						<span>&radic;</span>
+						江苏省
+					</li>
+					<li>
+						<span>&radic;</span>
+						湖南省
+					</li>
+				</ul>
+				<input type="text" name="city" id="city" placeholder="城市">
+				<input type="button" name="search" value="搜&#12288;&#12288;索">
+			</div>
+		</div>
+	</div>
+	<div class="nw-section-4 action">
+		<div class="action-item">
+			<div class="img-scan">
+				<img src="img/action@1.png" alt="">
+			</div>
+			<div class="title">
+				<h1>北京活动</h1>
+				<span>新社区大联盟</span>
+			</div>
+		</div>
+		<div class="action-item">
+			<div class="title">
+				<h1>上&#12288;海&#12288;活&#12288;动</h1>
+				<span>夜上海新景观探索</span>
+			</div>
+			<div class="img-scan">
+				<img src="img/action@2.png" alt="">
+			</div>
+		</div>
+		<div class="action-item">
+			<div class="img-scan">
+				<img src="img/action@3.png" alt="">
+			</div>
+			<div class="title">
+				<h1>深圳活动</h1>
+				<span>全新海岸线观点站</span>
+			</div>
+		</div>
+		<div class="action-item">
+			<div class="title">
+				<h1>香港活动</h1>
+				<span>奢侈消费大派送</span>
+			</div>
+			<div class="img-scan">
+				<img src="img/action@4.png" alt="">
+			</div>
+		</div>
+	</div>
+	<div class="nw-section-5 news">
+		<div class="row row1">
+			<div class="left">
+				<h3>新世界</h3>
+				<h1>TIME</h1>
+				<span>@新世界-北京</span>
+				<span>2016.04.01</span>
+			</div>
+			<div class="right">
+				<h1>新世界/<span>01</span></h1>
+				<p>
+				新世界是一个新世界新世界是一个新世界新世界是一个新世界新世界是一个新世界新世界是一个新世界新世界是一个新世界新世界是一个新世界新世界是一个新世界新世界是一个新世界新世界是一个新世界新世界是一个新世界
+				</p>
+				<button>更多详情</button>
+				<div class="slideDot">
+					<span class="active">1</span>
+					<span>2</span>
+					<span>3</span>
+				</div>
+			</div>
+		</div>
+		<div class="row row2">
+			<div class="left">
+				<div class="left">
+					<span>新时代</span>
+					<span>关于爱生活的我们</span>
+					<span class="divider white"></span>
+					<button class="inverted">查看更多</button>
+				</div>
+				<div class="right">
+					<span>新时代</span>
+					<span>关于爱生活的我们</span>
+					<span class="divider gray"></span>
+					<button>查看更多</button>
+				</div>
+			</div>
+			<div class="right">
+				<div class="mask"></div>
+			</div>
+		</div>
+	</div>
 	<div class="nw-form"></div>
 	<div class="nw-contact"></div>
 
