finisi html construct

--- a/izayl/index.html
+++ b/izayl/index.html
@@ -184,10 +184,59 @@
 			</div>
 		</div>
 	</div>
-	<div class="nw-form"></div>
-	<div class="nw-contact"></div>
+	<div class="nw-section-6 form">
+		<h1>成为我们的志愿者</h1>
+		<span class="divider red"></span>
+		<p>新世界的大家庭需要每一个爱生活的人的加入，如果你够年轻，有梦想，有激情</p>
+		<p>
+			那就不要犹豫，快来加入我们，成为改变所有人的生活的人
+		</p>
+		<div class="form-container">
+			<div class="nw-roles">
+				<ul>
+					<li>
+						<h1>新世界志愿者协议</h1>
+						<p>加入新世界志愿者的人员必须遵守中华人民共和国的相关法律法规，并且本着平等资源的原则 ......</p>
+						<span>&or;	more</span>
+					</li>
+					<li>
+						<h1>新世界志愿者权利</h1>
+						<p>新世界志愿者享受新世界内部所有资源共享的权利，并且享受所在地新世界活动的优先参与资格</p>
+						<span>&or;	more</span>
+					</li>
+					<li>
+						<h1>更多条款</h1>
+						<span>&or;	more</span>
+					</li>
+				</ul>
+			</div>
+			<form action="index.html">
+				<input type="text" name="name" placeholder="姓名：">
+				<input type="text" name="age" placeholder="年龄">
+				<input type="text" name="tel" placeholder="联系方式">
+				<textarea name="discrib" id="discrib" cols="30" rows="10"></textarea>
+				<button>提交申请</button>
+			</form>
+		</div>
+	</div>
+	<div class="nw-contact">
+		<h1>联系我们</h1>
+		<p>为了更好的获取我们最新的产品资讯，您可以留下您的电子邮箱快速订阅我们的产品资讯</p>
+		<p>也可以通过一下任何方式关注我们动态</p>
+		<input type="text" placeholder="someone@email.com">
+		<button>提交</button>
+		<div class="socials">
+			<i></i>
+			<i></i>
+			<i></i>
+			<i></i>
+		</div>
+	</div>
 
-	<footer></footer>
+	<footer>
+		<span>@2016新世界</span>
+		<span>Back to top</span>
+	</footer>
 
 </body>
 </html>
