--- a/izayl/index.html
+++ b/izayl/index.html
@@ -192,7 +192,7 @@
 			那就不要犹豫，快来加入我们，成为改变所有人的生活的人
 		</p>
 		<div class="form-container">
-			<div class="nw-roles">
+			<div class="nw-rules">
 				<ul>
 					<li>
 						<h1>新世界志愿者协议</h1>
@@ -211,31 +211,33 @@
 				</ul>
 			</div>
 			<form action="index.html">
-				<input type="text" name="name" placeholder="姓名：">
-				<input type="text" name="age" placeholder="年龄">
-				<input type="text" name="tel" placeholder="联系方式">
-				<textarea name="discrib" id="discrib" cols="30" rows="10"></textarea>
+				<input class="left" type="text" name="name" placeholder="姓名:">
+				<input class="right" type="text" name="age" placeholder="年龄:">
+				<input class="left" type="text" name="tel" placeholder="联系方式:">
+				<input class="right" type="text" name="addr" placeholder="联系地址:">
+				<textarea name="discrib" id="discrib" cols="30" rows="10" placeholder="请简单描述您梦想的生活:"></textarea>
 				<button>提交申请</button>
 			</form>
 		</div>
 	</div>
-	<div class="nw-contact">
+	<div class="nw-section-7 contact">
 		<h1>联系我们</h1>
 		<p>为了更好的获取我们最新的产品资讯，您可以留下您的电子邮箱快速订阅我们的产品资讯</p>
 		<p>也可以通过一下任何方式关注我们动态</p>
-		<input type="text" placeholder="someone@email.com">
-		<button>提交</button>
+		<div class="submit">
+			<input type="text" placeholder="someone@email.com"><button>提交</button>
+		</div>
 		<div class="socials">
-			<i></i>
-			<i></i>
-			<i></i>
-			<i></i>
+			<i class="iconfont">&#xe634;</i>
+			<i class="iconfont">&#xe90c;</i>
+			<i class="iconfont">&#xe603;</i>
+			<i class="iconfont">&#xe649;</i>
 		</div>
 	</div>
 
 	<footer>
-		<span>@2016新世界</span>
-		<span>Back to top</span>
+		<span class="left">@2016新世界</span>
+		<span class="right">Back to top</span>
 	</footer>
 
 </body>
